--- a/app/src/main/res/layout/info_fragment.xml
+++ b/app/src/main/res/layout/info_fragment.xml
@@ -9,8 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
         android:layout_marginBottom="2dp"
+        android:background="@color/colorWhite"
         android:orientation="vertical"
         android:padding="5dp">
 
@@ -18,7 +18,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            android:background="@drawable/border_gray"
+            android:background="@drawable/border_gray_circle"
             app:srcCompat="@drawable/ic_user" />
 
         <TextView
@@ -53,16 +53,19 @@
             style="@style/txtTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
             android:text="Полезное" />
-
+        <!-- Контакты -->
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
+            style="@style/btnInfo"
             android:text="Контакты" />
-
+        <!-- Полезная информация -->
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
+            style="@style/btnInfo"
             android:text="Полезная информация" />
     </LinearLayout>
 </LinearLayout>
