--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -59,6 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
+            android:ellipsize="end"
             android:layout_marginEnd="0dp"
             android:layout_toStartOf="@+id/txt_available"
             android:maxLines="1"
