--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,16 @@
         <item name="android:paddingRight">5dp</item>
         <item name="android:ellipsize">end</item>
     </style>
+    <!-- Кнопки "Информация" -->
+    <style name="btnInfo">
+        <item name="android:textSize">14sp</item>
+        <item name="android:background">@color/colorWhite</item>
+        <item name="android:layout_marginTop">1dp</item>
+        <item name="android:layout_marginBottom">1dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:gravity">left|center_vertical</item>
+        <item name="android:drawableRight">@drawable/ic_right</item>
+    </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
