--- a/app/src/main/res/layout/basket_fragment.xml
+++ b/app/src/main/res/layout/basket_fragment.xml
@@ -5,30 +5,86 @@
     android:background="@color/colorGray"
     android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
+        style="@style/txtTitleStyle"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:text="Корзина" />
+
+    <LinearLayout
+        android:id="@+id/layout_windowBasketNull"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
         android:orientation="vertical"
         android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:background="@color/colorWhite"
-        android:layout_height="wrap_content">
+        android:paddingBottom="20dp">
+
         <TextView
+            style="@style/txtTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/txtTitleStyle"
             android:layout_marginBottom="10dp"
-            android:text="Ваша корзина пуста"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="Ваша корзина пуста" />
+
         <Button
             android:id="@+id/btn_busket"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Приступить к покупкам"
             android:background="@color/colorGreen"
-            android:textColor="@color/colorWhite"/>
+            android:text="Приступить к покупкам"
+            android:textColor="@color/colorWhite" />
     </LinearLayout>
+    <!-- Элементы корзины -->
+    <com.example.ankas.Components.ExpandableHeightGridView
+        android:id="@+id/grid_basket"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp" />
     <!-- Купить товар -->
-    <!--  -->
+    <TextView
+        style="@style/txtTitleStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:text="Заказ товара" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        android:layout_marginBottom="2dp"
+        android:orientation="vertical">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Фамилия" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Имя" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="E-mail (mail@mail.ru)" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Телефон ( +7 (999) 999 99-99 )" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="38dp"
+            android:background="@color/colorGreen"
+            android:text="Оформить закза"
+            android:textColor="@color/colorWhite" />
+    </LinearLayout>
     <!-- Нижнее меню -->
-    <include layout="@layout/bottom_info"/>
+    <include layout="@layout/bottom_info" />
 </LinearLayout>
