--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -5,6 +5,34 @@
     android:layout_height="match_parent"
     android:background="@color/colorGray"
     android:orientation="vertical">
+    <!-- Обратный звонок -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        android:layout_marginBottom="2dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_tell"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="+7(351) 751-40-35"
+            android:textColor="@color/colorGreen"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/txt_callBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="Обратный звонок"
+            android:textColor="@color/colorGreen"
+            android:textSize="18sp" />
+    </LinearLayout>
     <!-- Баннер -->
     <ImageView
         android:layout_width="match_parent"
@@ -29,6 +57,12 @@
         android:numColumns="3"
         android:verticalSpacing="2dp" />
     <!-- Популярные товары -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Популярный товары"
+        android:layout_marginBottom="2dp"
+        style="@style/txtTitleStyle"/>
     <!-- Нижнее меню -->
-    <include layout="@layout/bottom_info"/>
+    <include layout="@layout/bottom_info" />
 </LinearLayout>
