--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -165,10 +165,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
                         android:layout_alignParentStart="true"
-                        android:layout_marginStart="0dp"
+                        android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
                         android:layout_toStartOf="@+id/btn_by"
-                        android:gravity="bottom|right"
+                        android:gravity="bottom"
                         android:text="0 Р"
                         android:textSize="24sp" />
 
