--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -9,11 +9,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
         android:layout_marginBottom="2dp"
+        android:background="@color/colorWhite"
+        android:orientation="horizontal"
         android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:orientation="horizontal">
+        android:paddingBottom="2dp">
 
         <TextView
             android:id="@+id/txt_tell"
@@ -53,16 +53,49 @@
         android:id="@+id/grid_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
         android:horizontalSpacing="2dp"
         android:numColumns="3"
         android:verticalSpacing="2dp" />
+    <!-- Популярные категории товаров -->
+    <TextView
+        style="@style/txtTitleStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:text="Популярные категории" />
     <!-- Популярные товары -->
+    <TextView
+        style="@style/txtTitleStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:text="Популярный товары" />
+
+    <LinearLayout
+        android:id="@+id/layout_popularCategory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
+    <com.example.ankas.Components.ExpandableHeightGridView
+        android:id="@+id/grid_popularProduct"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:horizontalSpacing="2dp"
+        android:numColumns="2"
+        android:verticalSpacing="2dp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Популярный товары"
-        android:layout_marginBottom="2dp"
-        style="@style/txtTitleStyle"/>
+        android:background="@color/colorWhite"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:text="В официальном приложении компании АНКАС, вы можете приобрести любое оборудование, представленное в каталоге компании. Для каждого товара у нас выгодные цены с максимально точным и подробным описанием, а также полными характеристиками и собственными фотографиями."
+        android:textSize="12sp" />
+
     <!-- Нижнее меню -->
     <include layout="@layout/bottom_info" />
 </LinearLayout>
