--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -62,8 +62,14 @@
         style="@style/txtTitleStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="1dp"
         android:text="Популярные категории" />
+    <LinearLayout
+        android:id="@+id/layout_popular_category"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"/>
     <!-- Популярные товары -->
     <TextView
         style="@style/txtTitleStyle"
