--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -28,14 +28,13 @@
             <!-- Изображения -->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:background="@color/colorWhite"
+                android:layout_height="300dp">
 
-                <ImageView
+                <com.example.ankas.Components.MySliderImage
+                    android:id="@+id/slider_image"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/banner" />
+                    android:layout_height="match_parent"/>
 
                 <TextView
                     android:layout_width="wrap_content"
