--- a/app/src/main/res/layout/activity_category_and_product.xml
+++ b/app/src/main/res/layout/activity_category_and_product.xml
@@ -29,11 +29,11 @@
 
             <RelativeLayout
                 android:id="@+id/layout_sorting_and_filtering"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
-                android:background="@color/colorWhite">
+                android:background="@color/colorWhite"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/txt_filtering"
