--- a/app/src/main/res/layout/info_fragment.xml
+++ b/app/src/main/res/layout/info_fragment.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     android:background="@color/colorGray"
     android:orientation="vertical">
+    <!-- Полезная ифнормация -->
+    <TextView
+        android:id="@+id/txt_title"
+        style="@style/txtTitleStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:text="Полезная информация" />
     <!-- Пользователи -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +20,8 @@
         android:layout_marginBottom="2dp"
         android:background="@color/colorWhite"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="5dp"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="100dp"
@@ -43,29 +52,75 @@
             android:text="Регистрация"
             android:textColor="@color/colorGreen" />
     </LinearLayout>
+
     <!-- Кнопки -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <Button
+            style="@style/btnInfo"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:text="Католог товаров" />
+
+        <!-- Контакты -->
+        <Button
+            style="@style/btnInfo"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:text="Контакты" />
+
         <TextView
             style="@style/txtTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:text="Полезное" />
-        <!-- Контакты -->
+            android:text="Серфис и поддержка" />
+
         <Button
+            style="@style/btnInfo"
             android:layout_width="match_parent"
             android:layout_height="36dp"
-            style="@style/btnInfo"
-            android:text="Контакты" />
-        <!-- Полезная информация -->
+            android:text="Оставить обращение" />
+
         <Button
+            style="@style/btnInfo"
             android:layout_width="match_parent"
             android:layout_height="36dp"
+            android:text="Обмен и возрат" />
+
+        <Button
             style="@style/btnInfo"
-            android:text="Полезная информация" />
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:text="Статус заказа" />
+
+        <TextView
+            style="@style/txtTitleStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:text="Получение и оплата" />
+
+        <Button
+            style="@style/btnInfo"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:text="Самовывоз" />
+
+        <Button
+            style="@style/btnInfo"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:text="Доставка" />
+
+        <Button
+            style="@style/btnInfo"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:text="Способы оплаты" />
     </LinearLayout>
+    <include layout="@layout/bottom_info"/>
 </LinearLayout>
