--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -2,77 +2,87 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
+    android:background="@color/colorGray"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txt_name"
-        style="@style/txtNameProductAndCategoryStyle"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:maxLines="2" />
-
-    <ImageView
-        android:id="@+id/image_product"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:padding="10dp"
-        android:scaleType="fitCenter" />
-    <!-- Купить и цена -->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp">
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"
+        android:orientation="vertical"
+        android:layout_margin="1dp"
+        android:padding="1dp">
 
         <TextView
-            android:id="@+id/txt_price"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="5dp"
-            android:layout_toStartOf="@+id/btn_by"
-            android:gravity="right|center_vertical"
-            android:text="0000" />
+            android:id="@+id/txt_name"
+            style="@style/txtNameProductAndCategoryStyle"
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:maxLines="2" />
 
-        <Button
-            android:id="@+id/btn_by"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
-            android:background="@color/colorGreen"
-            android:text="Купить"
-            android:textColor="@color/colorWhite" />
-    </RelativeLayout>
-    <!-- Бренд и наличие -->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp">
-
-        <TextView
-            android:id="@+id/txt_brand"
-            android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/image_product"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="0dp"
-            android:ellipsize="end"
-            android:layout_marginEnd="0dp"
-            android:layout_toStartOf="@+id/txt_available"
-            android:maxLines="1"
-            android:text="Название, страна" />
-
-        <TextView
-            android:id="@+id/txt_available"
-            android:layout_width="wrap_content"
+            android:adjustViewBounds="true"
+            android:padding="10dp"
+            android:scaleType="fitCenter" />
+        <!-- Купить и цена -->
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="0dp"
-            android:maxLines="1"
-            android:text="В наличии"
-            android:textColor="@color/colorGreen" />
-    </RelativeLayout>
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp">
+
+            <TextView
+                android:id="@+id/txt_price"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="5dp"
+                android:layout_toStartOf="@+id/btn_by"
+                android:gravity="right|center_vertical"
+                android:text="0000" />
+
+            <Button
+                android:id="@+id/btn_by"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:background="@color/colorGreen"
+                android:text="Купить"
+                android:textColor="@color/colorWhite" />
+        </RelativeLayout>
+        <!-- Бренд и наличие -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp">
+
+            <TextView
+                android:id="@+id/txt_brand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="0dp"
+                android:layout_toStartOf="@+id/txt_available"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Название, страна" />
+
+            <TextView
+                android:id="@+id/txt_available"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="0dp"
+                android:maxLines="1"
+                android:text="В наличии"
+                android:textColor="@color/colorGreen" />
+        </RelativeLayout>
+    </LinearLayout>
+
 </LinearLayout>
