--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -12,6 +12,7 @@
         android:background="@color/colorWhite">
 
         <ImageView
+            android:id="@+id/img_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -20,11 +21,11 @@
 
         <!-- Поиск -->
         <ImageView
+            android:id="@+id/img_search"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:padding="8dp"
             app:srcCompat="@drawable/search" />
-
     </RelativeLayout>
 </LinearLayout>
