--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -237,6 +237,7 @@
                 android:textColor="@color/colorBlue"
                 android:background="@color/colorWhite"
                 android:paddingLeft="5dp"
+                android:id="@+id/txt_messageError"
                 android:paddingRight="5dp"
                 android:text="Сообщить об ошибке в описании..."/>
             <!-- Нижнее меню -->
