--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorGray">#C1C1C1</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlue">#0053FF</color>
+    <color name="colorRed">#FF0000</color>
 </resources>
